# Blackjack_RL

./: .flake8  .gitignore  Blackjack.ipynb  Deep_Learning.ipynb  Deep_Learning_Count.ipynb  Game.py  Player.py  Q.npy  Q_Learning.py  README.md  RecursePlayer.py  Static_Analysis.ipynb  normalized.npy  pyproject.toml
helpers/: Q_Learning.py
models/: Q.npy  deep_q.onnx  deep_q.pt  deep_q_count.onnx  deep_q_count.pt
modules/: Game.py  Player.py
src/constants/: __init__.py
src/deep_learning/: __init__.py
src/deep_learning/helpers/: __init__.py  buffer.py  eval.py  plotting.py  training.py
src/deep_learning/modules/: __init__.py  net.py  replay.py  train.py
src/deep_learning/utils/: __init__.py  action.py  replay_buffer.py  runner.py
src/deep_learning/utils/play/: __init__.py  helpers.py  simulate.py
src/deep_learning/utils/replay_buffer/: __init__.py  gather.py  generate.py
src/deep_learning/utils/viz/: __init__.py  helpers.py  plotting.py  tables.py
src/deep_q/: helpers.py  modules.py
src/deep_q_count/: helpers.py  modules.py
src/helpers/: create_q_dict.py  deep_q.py  evaluation.py  plotting.py  q_learning.py  recurse_player.py  runner.py
src/modules/: cards.py  deep_q.py  game.py  player.py  train.py
src/pydantic_types/: __init__.py
src/q/modules/: q_agent.py  train.py
src/q/utils/: evaluation.py  plotting.py  q_learning.py  runner.py
utils/: Utils.py
