[tool.poetry]
name = "blackjack-rl"
version = "0.1.0"
description = "blackjack RL agents"
authors = ["peter simone <plssimone@gmail.com>"]
readme = "README.md"
packages = [{include = "blackjack_rl"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
torch = "^2.0.1"
pydantic = "^1.10.7"
onnx = "^1.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
flake8 = "^6.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
